force-app/main/default/objects/Case/fields/Alerta__c.field-meta.xml
<CustomField>
    <fullName>Alerta__c</fullName>
    <formula>IF( IsClosed  = false &amp;&amp;  Fecha_Limite__c &gt;= TODAY() &amp;&amp; Fecha_Limite__c  &lt;= TODAY()+1, IMAGE(&quot;/servlet/servlet.FileDownload?file=0150N000006j5QC&quot;, &quot;warning&quot; ) , IF( IsClosed  = false &amp;&amp;  Fecha_Limite__c &lt; TODAY(), IMAGE(&quot;/servlet/servlet.FileDownload?file=0150N000006j5QH&quot;,&quot;error&quot;),&quot;&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Alerta</label>
    <type>Text</type>
</CustomField>