force-app/main/default/objects/Case/fields/AlertayModulo__c.field-meta.xml
<CustomField>
    <fullName>AlertayModulo__c</fullName>
    <description>Usada para Kanban</description>
    <formula>TEXT(Modulo__c)+ &quot; &quot; + Alerta__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Alerta y Módulo</label>
    <type>Text</type>
</CustomField>