force-app/main/default/objects/Case/fields/Aprobador__c.field-meta.xml
<CustomField>
    <fullName>Aprobador__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Aprobador que valida y confirma la resolución del caso.</inlineHelpText>
    <label>Aprobador Primer Nivel</label>
    <referenceTo>User</referenceTo>
    <relationshipName>CasosAprobar</relationshipName>
    <type>Lookup</type>
</CustomField>