force-app/main/default/objects/Case/fields/Aprobador_Final__c.field-meta.xml
<CustomField>
    <fullName>Aprobador_Final__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Approver that definitively confirms the resolution of the case and therefore its closure</inlineHelpText>
    <label>Aprobador Final</label>
    <referenceTo>User</referenceTo>
    <relationshipName>CasosAprobadorFinal</relationshipName>
    <type>Lookup</type>
</CustomField>