force-app/main/default/objects/Case/fields/Dias_Restantes_para_Cierre__c.field-meta.xml
<CustomField>
    <fullName>Dias_Restantes_para_Cierre__c</fullName>
    <formula>IF( IsClosed, 0, Fecha_Limite__c - TODAY())</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Días Restantes para Cierre</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>