force-app/main/default/objects/Case/fields/Fecha_Limite__c.field-meta.xml
<CustomField>
    <fullName>Fecha_Limite__c</fullName>
    <label>Fecha Límite</label>
    <type>Date</type>
</CustomField>