force-app/main/default/objects/Case/fields/Hora_ltimo_Comentario__c.field-meta.xml
<CustomField>
    <fullName>Hora_ltimo_Comentario__c</fullName>
    <label>Fecha/Hora Último Comentario</label>
    <type>DateTime</type>
</CustomField>