force-app/main/default/objects/Case/fields/Informar_a_Soporte__c.field-meta.xml
<CustomField>
    <fullName>Informar_a_Soporte__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Marcar esta casilla para trasladar el caso al equipo de Soporte.</description>
    <label>Informar a Soporte</label>
    <type>Checkbox</type>
</CustomField>