force-app/main/default/objects/Case/fields/Proyecto__c.field-meta.xml
<CustomField>
    <fullName>Proyecto__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Proyecto</label>
    <referenceTo>Proyecto__c</referenceTo>
    <relationshipLabel>Casos</relationshipLabel>
    <relationshipName>Casos</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>