force-app/main/default/objects/Case/fields/ProyectoOrigen__c.field-meta.xml
<CustomField>
    <fullName>ProyectoOrigen__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Proyecto donde se origina la incidencia</description>
    <label>Proyecto Origen</label>
    <referenceTo>Proyecto__c</referenceTo>
    <relationshipLabel>Casos (Proyecto Origen)</relationshipLabel>
    <relationshipName>Casos1</relationshipName>
    <type>Lookup</type>
</CustomField>