force-app/main/default/objects/Case/fields/Solicitar_Desbloqueo__c.field-meta.xml
<CustomField>
    <fullName>Solicitar_Desbloqueo__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Solicitar Desbloqueo</label>
    <type>Checkbox</type>
</CustomField>