force-app/main/default/objects/Case/fields/Soy_Aprobador__c.field-meta.xml
<CustomField>
    <fullName>Soy_Aprobador__c</fullName>
    <formula>Aprobador__c =  $User.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Soy Aprobador</label>
    <type>Checkbox</type>
</CustomField>