force-app/main/default/objects/Case/fields/Soy_Aprobador_Final__c.field-meta.xml
<CustomField>
    <fullName>Soy_Aprobador_Final__c</fullName>
    <formula>Aprobador_Final__c == $User.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Soy Aprobador Final</label>
    <type>Checkbox</type>
</CustomField>