force-app/main/default/objects/Case/fields/Subentregable__c.field-meta.xml
<CustomField>
    <fullName>Subentregable__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Entregable</label>
    <referenceTo>Subentregable__c</referenceTo>
    <relationshipLabel>Incidencias</relationshipLabel>
    <relationshipName>Casos</relationshipName>
    <type>Lookup</type>
</CustomField>