force-app/main/default/objects/Case/fields/Supervisor__c.field-meta.xml
<CustomField>
    <fullName>Supervisor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Responsable de confirmar la resolución del caso antes de liberar para validación.</inlineHelpText>
    <label>Supervisor</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Casos</relationshipName>
    <type>Lookup</type>
</CustomField>