force-app/main/default/objects/Case/fields/SupervisorProyecto__c.field-meta.xml
<CustomField>
    <fullName>SupervisorProyecto__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Supervisor Proyecto</label>
    <referenceTo>User</referenceTo>
    <relationshipName>CasosSupervisadosProyecto</relationshipName>
    <type>Lookup</type>
</CustomField>