force-app/main/default/objects/Case/validationRules/Cambio_de_Estado.validationRule-meta.xml
<ValidationRule>
    <fullName>Cambio_de_Estado</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISCHANGED(Status),OR(NOT(ISPICKVAL(Status, &apos;En desarrollo&apos;)),OR(PRIORVALUE(Status)== &apos;Abierto&apos;,PRIORVALUE(Status)== &apos;Rechazado&apos;)), NOT( $Permission.AdministratorException))</errorConditionFormula>
    <errorMessage>No puede cambiar el Estado del caso manualmente al menos que sea desde Abierto o Rechazado a En Desarrollo. Use Enviar para Aprobación para evolucionar el estado.</errorMessage>
</ValidationRule>