force-app/main/default/objects/Case/validationRules/InformarSoporte.validationRule-meta.xml
<ValidationRule>
    <fullName>InformarSoporte</fullName>
    <active>true</active>
    <description>Solo puede enviarse el caso a soporte si el estado es Abierto</description>
    <errorConditionFormula>ISCHANGED(Informar_a_Soporte__c) &amp;&amp; (NOT(ISPICKVAL(Status, &apos;Abierto&apos;)))</errorConditionFormula>
    <errorDisplayField>AssetId</errorDisplayField>
    <errorMessage>Solo se puede enviar un caso a soporte si el estado es igual a Abierto</errorMessage>
</ValidationRule>