force-app/main/default/objects/Case/validationRules/Pasar_a_NotificadoValidacionCerrado.validationRule-meta.xml
<ValidationRule>
    <fullName>Pasar_a_NotificadoValidacionCerrado</fullName>
    <active>false</active>
    <description>No permite pasar a validado si no es el supervisor.</description>
    <errorConditionFormula>ISCHANGED(Status) &amp;&amp; (ISPICKVAL(Status, &apos;Notificado&apos;) || ISPICKVAL(Status, &apos;Cerrado&apos;) || ISPICKVAL(Status, &apos;En validación&apos;)) &amp;&amp; Supervisor__c != $User.Id</errorConditionFormula>
    <errorMessage>No puede pasar a Notificado, En Validación o Cerrado al menos que sea el supervisor del caso.</errorMessage>
</ValidationRule>