force-app/main/default/objects/Case/validationRules/Pasar_a_Validado.validationRule-meta.xml
<ValidationRule>
    <fullName>Pasar_a_Validado</fullName>
    <active>false</active>
    <description>No permite pasar a validado si no es el supervisor.</description>
    <errorConditionFormula>ISCHANGED(Status) &amp;&amp; ISPICKVAL(Status, &apos;Liberado&apos;) &amp;&amp; Supervisor__c != $User.Id</errorConditionFormula>
    <errorMessage>No puede pasar a validado al menos que sea el supervisor del caso, o envíe el caso para aprobación.</errorMessage>
</ValidationRule>