force-app/main/default/objects/Case/listViews/AllOpenCases.listView-meta.xml
<ListView>
    <fullName>AllOpenCases</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
    <columns>Fecha_Limite__c</columns>
    <columns>Aprobador__c</columns>
    <columns>Modulo__c</columns>
    <columns>UPDATEDBY_USER.ALIAS</columns>
    <columns>Subentregable__c</columns>
    <columns>CASES.LAST_UPDATE_DATE_ONLY</columns>
    <filterScope>Everything</filterScope>
    <label>Todos los casos</label>
</ListView>