force-app/main/default/objects/Case/listViews/Casos_Abierto_Aprobador.listView-meta.xml
<ListView>
    <fullName>Casos_Abierto_Aprobador</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Soy_Aprobador__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>CASES.CLOSED</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>Casos Abiertos de los que soy Aprobador</label>
    <sharedTo>
        <role>Cliente</role>
    </sharedTo>
</ListView>