force-app/main/default/objects/Case/listViews/Casos_Notificados_Pendientes_de_Aprobar.listView-meta.xml
<ListView>
    <fullName>Casos_Notificados_Pendientes_de_Aprobar</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Soy_Aprobador__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>CASES.STATUS</field>
        <operation>equals</operation>
        <value>Notificado</value>
    </filters>
    <label>Casos Notificados Pendientes de Aprobar</label>
    <sharedTo>
        <role>Cliente</role>
    </sharedTo>
</ListView>