force-app/main/default/objects/Case/listViews/Kanban_DM.listView-meta.xml
<ListView>
    <fullName>Kanban_DM</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>AlertayModulo__c</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Modulo__c</field>
        <operation>equals</operation>
        <value>DM</value>
    </filters>
    <label>Kanban DM</label>
</ListView>