force-app/main/default/objects/Case/listViews/Kanban_por_estado.listView-meta.xml
<ListView>
    <fullName>Kanban_por_estado</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>AlertayModulo__c</columns>
    <columns>CASES.STATUS</columns>
    <columns>CORE.USERS.LAST_NAME</columns>
    <filterScope>Everything</filterScope>
    <label>Kanban por estado</label>
</ListView>