force-app/main/default/objects/Case/listViews/Kanban_WM.listView-meta.xml
<ListView>
    <fullName>Kanban_WM</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>AlertayModulo__c</columns>
    <columns>CASES.STATUS</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Modulo__c</field>
        <operation>equals</operation>
        <value>WM</value>
    </filters>
    <filters>
        <field>CASES.STATUS</field>
        <operation>notEqual</operation>
        <value>Notificado,Cerrado</value>
    </filters>
    <label>Kanban WM</label>
</ListView>