force-app/main/default/objects/Case/listViews/Mis_casos_Pendientes.listView-meta.xml
<ListView>
    <fullName>Mis_casos_Pendientes</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>AlertayModulo__c</columns>
    <columns>Fecha_Limite__c</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.ORIGIN</columns>
    <columns>Supervisor__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>CASES.CLOSED</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>Mis Casos Pendientes</label>
</ListView>