force-app/main/default/objects/Case/listViews/Soy_Aprobador_y_vence_Hoy_o_Ma_ana.listView-meta.xml
<ListView>
    <fullName>Soy_Aprobador_y_vence_Hoy_o_Ma_ana</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>Dias_Restantes_para_Cierre__c</columns>
    <columns>Fecha_Limite__c</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>Aprobador__c</columns>
    <columns>Aprobador_Final__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Soy_Aprobador__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>Fecha_Limite__c</field>
        <operation>lessOrEqual</operation>
        <value>TOMORROW</value>
    </filters>
    <filters>
        <field>Fecha_Limite__c</field>
        <operation>greaterOrEqual</operation>
        <value>TODAY</value>
    </filters>
    <filters>
        <field>CASES.STATUS</field>
        <operation>notEqual</operation>
        <value>Rechazado,Cerrado</value>
    </filters>
    <label>Soy Aprobador y vence Hoy o Mañana</label>
</ListView>